[package]
name = "sui-poc-framework"
version = "0.1.1"
edition = "2021"
authors = ["Garrett Weber <garrettbenweber@gmail.com>"]
repository = "https://github.com/Garrett-Weber/sui-poc-framework"
license = "MIT"
keywords = ["sui", "security", "move", "blockchain", "poc", "framework", "sui-poc-framework"]

[dependencies]
anyhow = "1.0.79"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["rt"] }

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "fastcrypto-v0.1.7" }
move-core-types = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-keys = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-framework = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
sui-swarm-config = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
simulacrum = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }


[dev-dependencies]
bcs = "0.1.4"
serde = { version = "1.0.144", features = ["derive"] }
lazy_static = "1.4.0"
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "devnet-v1.17.0" }
